# rust-gRPC

./: .env.example  Cargo.toml  README.md  build.rs
proto/: indexer.proto
src/: main.rs  service.rs
src/methods/: get_account_info.rs  get_program_accounts.rs  get_slot_info.rs  get_transaction_info.rs  mod.rs  stream_slot_info.rs
