
[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.9"
